# study6

./: .gitignore  main_nb.py  pyproject.toml
__marimo__/session/: main_nb.py.json
chma/lab2/: numintegrals.py  report.typ  theory_part.md
isvpu/lab1/: README.md  controllers.py  data_structures.py  main.py  main_controller.py  report.typ  states.py
mo/lab2/: main.py  pyproject.toml
nlp/prac1/: news.csv  news_cleaned.csv  report.typ  task1.py  task2.py  task3.py  theory_part.md
nlp/prac2/: description.md  report.typ  results.json  run_results.py  task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  theory.md
optimization/lab2/: main_jup.ipynb  optimizers.py
pfi/Лабораторная работа 4/: Лабораторная работа № 4.htm
pfi/Лабораторная работа 4/site/: README.md  articles.html  contacts.html  gallery.html  index.html
pfi/Лабораторная работа 4/Лабораторная работа № 4_files/: 163  counter  (+1 more)
pfi/Лабораторная работа 5/: JavaScript_Lab 5.1.htm  JavaScript_Lab 5.2.htm  JavaScript_Lab 5.3.htm  JavaScript_Lab 5.4.htm  JavaScript_Lab10.htm  JavaScript_Lab11.htm  JavaScript_Lab12.htm  JavaScript_Lab5.htm  JavaScript_Lab6.htm  JavaScript_Lab7.htm  JavaScript_Lab8.htm  JavaScript_Lab9.htm  ПдляИ2.pptx
pfi/Лабораторная работа 5/JavaScript_Lab10_files/: adv_out  saved_resource  (+1 more)
pfi/Лабораторная работа 6/: README.md  connection.php  index.php  init.sql  style.css  ~$ПдляИ7.pptx  Задание на лабораторную 6.doc  ПдляИ6.pptx  Указание к выполнению.doc
pp/lab1/: a.out  lec2.md  main.cpp
pp/lab2/: main  main.cpp  results.md
tp/lab1/: main.py  some.ipynb
(+55 files in other folders)
