[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "marimo>=0.19.11",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pydantic-ai>=1.62.0",
    "scikit-learn>=1.8.0",
    "tools>=1.0.23",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ty>=0.0.18",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.uv]
environments = [
	"sys_platform == 'linux'"
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
